[gd_scene load_steps=3 format=3 uid="uid://c6ku3mk1t5ei2"]

[ext_resource type="Script" path="res://assets/npobject (deprecated)/np_object.gd" id="1_clgno"]

[sub_resource type="LabelSettings" id="LabelSettings_njm33"]
font_size = 50

[node name="NPObject" type="StaticBody2D" node_paths=PackedStringArray("pop_up") groups=["NPObjects"]]
collision_layer = 3
input_pickable = true
script = ExtResource("1_clgno")
pop_up = NodePath("Sprite2D2")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 1

[node name="Label" type="Label" parent="Sprite2D2"]
offset_left = -7.0
offset_top = -150.0
offset_right = 11.0
offset_bottom = -80.0
text = "!"
label_settings = SubResource("LabelSettings_njm33")
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
